--- a/src/components/Blocks/ListMenu.astro
+++ b/src/components/Blocks/ListMenu.astro
@@ -30,7 +30,7 @@ const { content } = Astro.props;
                         </div>
                         <div>
                             <button
-                                class="btn btn-soft btn-circle tooltip tooltip-left tooltip-primary"
+                                class="btn btn-soft btn-circle tooltip tooltip-left tooltip-accent"
                                 data-tip="Bagikan menu"
                                 data-action="copyLinkMenu"
                                 data-params={JSON.stringify({
