--- a/src/components/Blocks/Fab.astro
+++ b/src/components/Blocks/Fab.astro
@@ -14,7 +14,7 @@ const { content } = Astro.props;
 <div class="fixed w-full max-w-md h-full pointer-events-none">
     <div class="relative flex flex-col w-full h-full items-end justify-end py-20 px-4">
         <div class="dropdown dropdown-end dropdown-top pointer-events-auto">
-            <div tabindex="0" role="button" class="btn btn-xl btn-primary btn-circle">
+            <div tabindex="0" role="button" class="btn btn-xl btn-accent btn-circle">
                 {content.icon.type === "icon" && <Icon name={content.icon.name} class={clsx(content.icon.style)} />}
                 {
                     content.icon.type === "image" && (
@@ -31,7 +31,7 @@ const { content } = Astro.props;
             <ul
                 class="dropdown-content menu bg-base-100 shadow-md shadow-base-content/35 w-64 mb-4 rounded-box overflow-y-auto"
             >
-                {content.children.title && <li class="menu-title text-primary font-bold">{content.children.title}</li>}
+                {content.children.title && <li class="menu-title text-accent font-bold">{content.children.title}</li>}
                 {
                     content.children.children.map((item) => {
                         if (item.type === "anchor") {
