--- a/src/components/Blocks/HeaderProfile.astro
+++ b/src/components/Blocks/HeaderProfile.astro
@@ -2,13 +2,8 @@
 import OpeningHoursButton from "@components/OpeningHoursButton.astro";
 import ShareButton from "@components/ShareButton.astro";
 import type { HeaderProfileInterface } from "@datas/blocks.type";
-import { site } from "@datas/site";
 import { Image } from "astro:assets";
 import clsx from "clsx";
-import { format, isWithinInterval } from "date-fns";
-import { id } from "date-fns/locale";
-import Str from "lodash";
-import { toZonedTime } from "date-fns-tz";
 
 // Type & Interfaces
 interface content {
@@ -28,7 +23,7 @@ const { content } = Astro.props;
     <Image
         src={content.bgCover}
         alt={`Background cover ${content.title}`}
-        class="absolute inset-0 w-full h-full object-cover object-center mask-b-from-0 mask-b-to-65 animate-in fade-in slide-in-from-top-5 duration-750"
+        class="absolute inset-0 w-full h-full object-cover object-center mask-b-from-0 mask-b-to-65"
     />
     <div class="flex flex-col items-center">
         <!-- Avatar -->
@@ -63,9 +58,9 @@ const { content } = Astro.props;
         // Initiation element
         const profileElement = document.querySelector<HTMLElement>("[data-profile]");
         if (!profileElement) return;
-        const profilePicture = profileElement.querySelector("[data-picture]");
-        const profileBadge = profileElement.querySelector("[data-badge]");
-        profileBadge.classList.add("animate-in", "fade-in", "slide-in-from-bottom-20", "duration-500", "animate-once");
+        const profilePicture = profileElement.querySelector<HTMLElement>("[data-picture]");
+        const profileBadge = profileElement.querySelector<HTMLElement>("[data-badge]");
+        profileBadge.classList.remove("opacity-0");
         // Checking cafe status
         // Badge
         profileBadge.classList.remove("opacity-0");
