--- a/src/components/CommonHead.astro
+++ b/src/components/CommonHead.astro
@@ -25,8 +25,7 @@ const { title } = Astro.props;
 <!-- Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-<link
-    href="https://fonts.googleapis.com/css2?family=Vend+Sans:ital,wght@0,300..700;1,300..700&display=swap"
-    rel="stylesheet"
-/>
-<link rel="shortcut icon" href={site.picture.favicon} type="image/x-icon" />
+<link href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap" rel="stylesheet" />
+
+<!-- Favicon -->
+<link rel="shortcut icon" href={site.picture.favicon.src} type="image/x-icon" />
