--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,10 @@
 @import "tailwindcss";
 @import "./themes.css";
-@import "tw-animate-css";
 @import "./transition-animate.css";
 
 @theme {
-    --font-sans: "Vend Sans", sans-serif;
+    --font-sans: "Onest", sans-serif;
+    --animate-fade-in: fade-in 0.5s ease-out 1 normal both;
 }
 
 html {
